--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: 12.17.0
       - name: Setup package.json
-        run: echo '{"main":"./npm/esm/mod.js","name":"@sidiousvic/motor","version":"0.0.0","publishConfig":{"access":"public"},"scripts":{"semantic-release":"semantic-release"},"repository":{"type":"git","url":"https://github.com/sidiousvic/motor.git"},"author":"sidiousvic","license":"MIT","bugs":{"url":"https://github.com/sidiousvic/motor/issues"},"homepage":"https://github.com/sidiousvic/motor","devDependencies":{"semantic-release":"^17.0.4","semantic-release-gitmoji":"^1.3.3"}}' > package.json
+        run: echo '{"main":"esm/mod.js","name":"@sidiousvic/motor","version":"0.0.0","publishConfig":{"access":"public"},"scripts":{"semantic-release":"semantic-release"},"repository":{"type":"git","url":"https://github.com/sidiousvic/motor.git"},"author":"sidiousvic","license":"MIT","bugs":{"url":"https://github.com/sidiousvic/motor/issues"},"homepage":"https://github.com/sidiousvic/motor","devDependencies":{"semantic-release":"^17.0.4","semantic-release-gitmoji":"^1.3.3"}}' > package.json
       - name: Install dependencies
         run: npm install
       - name: Release
