fix(ci): reformat release file

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,11 +3,7 @@
     [
       "semantic-release-gitmoji",
       {
-        "releaseRules": {
-          "patch": {
-            "include": [":bento:", ":recycle:"]
-          }
-        }
+        "releaseRules": { "patch": { "include": [":bento:", ":recycle:"] } }
       }
     ],
     "@semantic-release/github",
