--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,12 +1,3 @@
 {
-  "plugins": [
-    [
-      "semantic-release-gitmoji",
-      {
-        "releaseRules": { "patch": { "include": [":bento:", ":recycle:"] } }
-      }
-    ],
-    "@semantic-release/github",
-    "@semantic-release/npm"
-  ]
+  "plugins": ["@semantic-release/github", "@semantic-release/npm"]
 }
